add basic postgres service with persistent volume on homelab1

--- a/kubernetes/secrets.yaml
+++ b/kubernetes/secrets.yaml
@@ -6,6 +6,9 @@ metadata:
 type: Opaque
 stringData:
     HELLOWORLD: ENC[AES256_GCM,data:y+4toErzjmaoqGs5XO3l2wevig3ndw==,iv:CFD69JUcqCxWr7qx4K/qHOlHslmOYbwxkvkKc21JQNA=,tag:XyI9TqdoLiEGAf5i+CjT/w==,type:str]
+    POSTGRES_DB: ENC[AES256_GCM,data:CrzlyvmzXQ==,iv:lmFwq74oU0QnvxxHveqBYKMsXb2m1Atc6fSDsxSzmTI=,tag:smjBtl2YUdv4dkZNZ/z64w==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:TEw8wLoD/W4=,iv:SYdUo/aTybx0ds6PkEzjbHwIKpJ6VNXWQc7FQpXkoFk=,tag:nlE8S2CVoFdR92VExHEtXg==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:ZSETfOBeg+Keo4bLBx45Y+fS4UrsQcI2WsWDn+F1De2DfZCwlgibYDyvZBF7O7ibQPTsobDnUxDM/vjc6c4z0Q==,iv:QvNNOUz4uW67esep2m5FM1ahFgCrsApK+SuQMG1glPM=,tag:HViL0L87FBGcgbvewXZoiQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -48,8 +51,8 @@ sops:
             VlpJbWE5K0lZMmlyYW9QaWkwNDVrSEEKmE++hU6AVNEi8w0XNndc7Xtr3BA0ZDjL
             rIZgdQ1s21Jmbi5bNJQjIgoKFZhOdpUSuYDJQ22Uxv6pmPcPLScI1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-26T07:26:59Z"
-    mac: ENC[AES256_GCM,data:dv6HlrYDmYxdyCJ8lB6LCrqOjgirmzSfOTiFpwXUg+0yRZglD5JTt4nEBywqZxII64aKc++F0+GrJom/U1yvUhQhtCbKm6GujUF9I7Z6fJItswb1I/SbNkY2ZD6ovyk8lrR2fTUs5JFefDh1JM1ssSjq7LQDk7y+CbyHq6ayLww=,iv:7nmY4qhdjMGrU0hPZNiIuMBXQLbc9YfpdpbdQyJPsZM=,tag:7/iCV9CN3u63owcR89g9qQ==,type:str]
+    lastmodified: "2025-05-26T14:05:30Z"
+    mac: ENC[AES256_GCM,data:CnGC1+iwZYr1S8K3qIaMFYpmWunqhcyRCdwdIJZ0xcopDhunPO9sba9iaIWuyyx/BUj7MmrXJHdPSdQpRjhErw7QHwqVITjSezvgULb4xSMJtT+KnrmRXKmFxdrHray/tua4aEsExstUb7tzgy91rkH4NRPAV8hLMN0E231lP3Q=,iv:X2MIPDhpBFjBpoifYym75HYdZg+lSlChw+xag/8Xp10=,tag:AimFHIrWgmvi95IVE3f+4Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
