--- a/kubernetes/prometheus/ingress.yaml
+++ b/kubernetes/prometheus/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-  - host: prometheus.local
+  - host: prometheus.homelab
     http:
       paths:
       - path: /
