--- a/kubernetes/prometheus/kustomization.yaml
+++ b/kubernetes/prometheus/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- configmap.yaml
+- rbac.yaml
 - deployment.yaml
 - service.yaml
 - ingress.yaml
