--- a/.sops.yaml
+++ b/.sops.yaml
@@ -12,3 +12,10 @@ creation_rules:
       - *homelab1
       - *homelab2
       - *homelab3
+  - path_regex: secrets.yaml
+    key_groups:
+    - age:
+      - *gustaf_mbp
+      - *homelab1
+      - *homelab2
+      - *homelab3
