--- a/kubernetes/prometheus/ingress.yaml
+++ b/kubernetes/prometheus/ingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: prometheus-ingress
   namespace: default
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.tls: "true"
 spec:
   rules:
   - host: prometheus.homelab
@@ -17,3 +18,5 @@ spec:
             name: prometheus
             port:
               number: 9090
+  tls:
+  - secretName: homelab-tls
