--- a/services/deploy/kustomization.yaml
+++ b/services/deploy/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- tls.yaml
+- secrets.yaml
 - ../helloworld/deploy/
 - ../homeassistant/deploy/
 - ../postgres/deploy/
