update path and secretRef

--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -8,9 +8,11 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ../../services/deploy/
+  path: ./services/deploy/
   prune: true
   wait: true
   timeout: 5m0s
   decryption:
     provider: sops
+    secretRef:
+      name: sops-age
