--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -7,6 +7,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
+    name: flux-system
   path: ./services/deploy/
   prune: true
   wait: true
