fix adding flux age key

--- a/services/deploy/secrets.yaml
+++ b/services/deploy/secrets.yaml
@@ -14,49 +14,53 @@ stringData:
     srv_helloworld_postgres_user: ENC[AES256_GCM,data:Kb62NdD8JYufcf7buETpYWe5,iv:ZO/kb4crjPIkfiuumNrAHNOM+6qDoSErpby5ZENVcAk=,tag:tIXzJ9xP2xKwBU88iNv+yA==,type:str]
     srv_helloworld_postgres_password: ENC[AES256_GCM,data:N2IzkNTpsHDDh3nN14EUcQvgizOfTHuI3V5qI8Y+ttI9olmkBC2T8klgPn96C2rSlyN8RWYIoNsLerIiracKYq/+Xhqgy0w4,iv:l+UvllL4o1SL4b0rSvMsHjbftdzQHjjd4gMSFPMR42k=,tag:YtoBpCaofHGnsNfcoOiGDQ==,type:str]
 sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
     age:
         - recipient: age1j0kun6sgqunj0ll7dzsrl7dv8l8h423z3e7z845we7kayq96nshqwn8fgd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5Tk81L25JT3dKUHVEN3Jp
-            TFFMTFh6TmdTaUpWMkh4YkNqOWRTT2xjZ0dZCm10ZmdQRTc4MWhBMlZ0eVhnNysy
-            L24yNXRTZ0pLTFc5NkNEZzY3S1Urc0EKLS0tIGRoYXZZYkE0QTdEVU5lYnJqekJP
-            elhXVzVNMVR4bm9pZ3cxYjlQU2FmWjQKWOo+8zvYe+7HM0DCE57mK3s8kZZAfYlw
-            BDcYCAy1wSgANlS/QO2rAmmZ+GWestpjwIMKPXkjX4D3lI86PsK17w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMUR6VlUxcGVOY0VQY3oy
+            RjJlVENyL3NlYWhZbjBJc2t5NnRiL0w2S1VrCmxDRHRrODZhd3VNY0NLdmZEM0ds
+            MHNTUC9DaUVOSGQ1N0MxeEJ2UnpOYWsKLS0tIHFhQlhCQ0I5Y01Sb3ZkdVhoY1py
+            Zm5JM0cwNEVZOGdGREFJTTVHTDRGZFUKx+x68PoGc2Thwj4Dx5qF4bUmLAbcBIU3
+            vjA3lErKkv3vgeCzORJIRZeP0e+m1PQxrl/fbZEkqzicg1Yr5QBiig==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1ap55tggyg26qsd44vw30ayzj792zgsz98jna7zhjcuy9amszne7sy2ts6z
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtcEU4dHE2SUlHUlNzU1ht
-            bkIvMkpSL1VhbTFZN2xCMzlKZnhJZFJ1aVNNCkt5UjRHTWJleWNxaGlHZTcvZmhN
-            MFMwS09NMWlpdjBvU0FJYmZZN1pYek0KLS0tIE93WVdZL3JnbFFsT2R4bm1PRjBQ
-            aldKd0RsdWNDVlhmakxtMnpNWmlwVmMKcdn+TufATo8+E/UXog07W0L5coxLliDB
-            1HYtiB0sgpY7xUL/+Rf5xnGGVNTyYzlKlqcuZeUGFlJX/cOKlC9bFg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwdXlyOElKRFhXMVIzRzFx
+            RkFtR0hoVDNORUgwZ2JRdm5KYkl5OUJGckN3CjQzdDRWQU1JRW9sbU1pUy91c2ZF
+            T3FoZUc4Q1M5RFZGTEUrUjl1UkdZTTgKLS0tIDNPWklmTUY2WHpEeXlwNUZPUWd2
+            MUQvVFVYZXE1dHY2a1BDZWtoZEV1c28Kh4xvfJ59GYI/kghNdFa+AkEJ0Eb5vJy1
+            ri0bvz2ph2mqZBduEEUc3hBDG+J9DoelM9VxCMi2q0SE/N7WYKF2tA==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age17p0h8gpsxhmq7p2nk7r56rmt0y7xv88jlhm304guwfc3250z5p9qpjvm2g
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwQzZzRGtuSVM1RkxlTVBU
-            MjZtM1owVklrWTc3VXJ3TngzdjlpV05QcGk0CmZWa0lrOTlwaHJkNURjL0JsbmZq
-            Z1hnTzVJajBzYnIyUDQyK3JCWlNiZ1EKLS0tIE15YVhhZUd3Rndwanc1SjZsdjU1
-            ZzRzQ0dDci9hc2hTT1dlc1k5VmxiSlkKZBq2lkdh+kQYr8lmHUsozpDw0bUteNtU
-            3K16O2Hm1+8XVLy3jFZNz94sJeyWq33EmCQMBL9+X03Ru8IA3WOhWA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhN0l4QXFOSHpLdWZ1Mjhm
+            NW9LY2VzZFF2UDE1UFgycVh2SjVrNzdZWFFZCkRGZ2Y0MG5BYnB4OS96QW11Q2Z2
+            R1RiaVQ0ZGNFdi9qbW0xd3BaTXFzWmsKLS0tIFcyWGlSRzFjS01WLzFQS1ZUUXNG
+            K1YxNmhDMVZHUnF0WTlzNnBuMEFMKzgK53hxcfbLlEBdK8YNgTwCFpuO67nyLVV0
+            Gy6THziONK+BwZQu6FjlBpwDvWV7m2CSEvQz3wXI3x/lmGIGnFNNyQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age17vy29ayvjxk6rs66rc5wcluy9x09y3y8n75psmuutzt6mel675hs6ktf5w
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2MTc3c2dKdk5JSFcvb2VY
-            bkY5b2JOSWtjSFJXZHExYitJeTNxRUVURWxnCmJZSlJDakQ5Y1RGK0k1dXFwQkNn
-            R3d1Smc2Rjk4NTkyaWFRNmZ2S1BIcEUKLS0tIDNnbFpGZkFvUDUxY0dpN0hOTVZw
-            VlpJbWE5K0lZMmlyYW9QaWkwNDVrSEEKmE++hU6AVNEi8w0XNndc7Xtr3BA0ZDjL
-            rIZgdQ1s21Jmbi5bNJQjIgoKFZhOdpUSuYDJQ22Uxv6pmPcPLScI1Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4cHlNeWlEWHIyejZmc2hr
+            T0lJTWx2aVZac0tXMmVQaU9JNlQ4cVV0K1NRCjdya2ozSkxIT3Z2Vi9sRm5JSmJh
+            YStsVGtKcy9Tc21XazRQdENaWmxaaHcKLS0tIDJlSmwvNjdDQ1Z5R3hja1lpK3RH
+            c1JzMlJVUzdWUnVsbEQ2dEpDMzk3c28Knw6Hla93Z4UfAENZ660H0q1+Orr5sFbB
+            LxEcjM7MC15M2oKdEtlfaaaPIjlUWAwnV6poWjMlS6Zg2hrPtZgESQ==
+            -----END AGE ENCRYPTED FILE-----
+        - recipient: age1rp3erwq400trpw7psgdzn7g54kp0e2c3lx094lmnjhz4wclwhaess0lgup
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyNGlPYmp3VzlmK3R4c0tz
+            QkFpS2ZKS0hyT3B4NUt3YUdncVNUVkxEaGh3ClRObzRoL1hLOFJuc1ZqN1Jwd2sy
+            aHQrT04zVW1NZjNodS9TREJMdXNLS3cKLS0tIE00N2tnL1BUblVUaFM5bG1vYkdT
+            SEZ5VnlLVG5TTjBXWjNVY3E5UlhVbGcKG/7OAervOouUBPI+DTEu7UWNmYs/xSEr
+            LhACpjTWIKr6eaWrDfovKa7OMLhflMY+Qf2WiTNLxj8TmKSJO+FSuA==
             -----END AGE ENCRYPTED FILE-----
     lastmodified: "2025-06-01T10:59:36Z"
     mac: ENC[AES256_GCM,data:B1yKK2Wc/BCM54lsfpiZEd5gkzSFAypzMre3cL6jFmlt0dnBKRbo1aYxigAI86jy/JFynu+MFNT3K/5oU6bVAL0JLvsIyKG/lPePFjvdHQXuYp4B4Z1dEPFmP1nUmBpLfw1HEk9hfriv0fhxN6P/j8yCbH852NySR0lGzY0C02I=,iv:JPFdWBKrgijxbXOtzyIG4FIJ78wpMvqKALSgTTqy2nw=,tag:V6FHhiw7MYpqeow6UelqGA==,type:str]
-    pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
