add tls host name

--- a/services/tailscale/deploy/ingress.yaml
+++ b/services/tailscale/deploy/ingress.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: default
 spec:
   ingressClassName: tailscale
+  tls:
+    - hosts:
+        - hello
   rules:
   - http:
       paths:
