--- a/services/tailscale/deploy/ingress.yaml
+++ b/services/tailscale/deploy/ingress.yaml
@@ -13,3 +13,19 @@ spec:
   tls:
     - hosts:
         - hello
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: tailscale-prometheus-ingress
+  namespace: default
+spec:
+  defaultBackend:
+    service:
+      name: prometheus
+      port:
+        number: 80
+  ingressClassName: tailscale
+  tls:
+    - hosts:
+        - prometheus
