--- a/services/user/Dockerfile
+++ b/services/user/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.24.2-alpine3.21 AS base
+FROM docker.io/golang:1.24.2-alpine3.21 AS base
 
 RUN apk --no-cache add ca-certificates
 
@@ -7,6 +7,7 @@ COPY go.mod ./
 COPY go.sum* ./
 RUN go mod download
 RUN go install github.com/sqlc-dev/sqlc/cmd/sqlc@v1.29.0
+RUN go install github.com/air-verse/air@latest
 
 FROM base AS build
 WORKDIR /app
@@ -17,8 +18,8 @@ FROM base AS development
 WORKDIR /app
 EXPOSE 8080
 ENV PORT=8080
-COPY . .
-CMD ["go", "run", "./cmd/api"]
+# Files should be available on /app via volume mount
+CMD ["air", "-c", ".air.toml"]
 
 FROM alpine:3.21 AS production
 WORKDIR /app
