--- a/services/user/compose.yaml
+++ b/services/user/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:17.5-alpine3.21
+    image: docker.io/postgres:17.5-alpine3.21
     restart: unless-stopped
     ports:
     - 5432:5432
@@ -33,12 +33,8 @@ services:
     environment:
       - PORT=8080
       - POSTGRES_URL=postgres://service_user:postgres@postgres:5432/service_user?sslmode=disable
+    volumes:
+      - ./:/app
     depends_on:
       migration:
         condition: service_completed_successfully
-    develop:
-      watch:
-      - action: sync+restart
-        path: .
-        target: /app
-    
